<resources>
    <string name="app_name">PRODUCTIVITO</string>
    <string name="welcome_text">
       Welcome to productivito
    </string>
    <string name="name_label">
        Enter your name to get Started
    </string>
    <string name="input_name">Name</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome,</string>
    <string name="dashboard">Dashboard</string>
    <string name="pomodoro">POMODORO TIMER</string>
    <string name="toDo">TO DO LIST</string>
    <string name="habitTracker">HABIT TRACKER</string>
    <string name="dailyJournal">DAILY JOURNAL</string>
    <string name="weeklyPlanner">WEEKLY PLANNER</string>
    <string name="priorityMatrix">PRIORITY MATRIX</string>
    <string name="pomodoro_content">
        A Pomodoro timer is a tool used in the Pomodoro Technique, a time management method that involves working in 25-minute intervals with short breaks in between
    </string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="newEntryTitle">Enter your Thoughts ...</string>
    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="last_time_used">"Last time used: "</string>
    <string name="time_span">"Time span: "</string>

    <string name="display_order_text">Sort by:</string>
    <string name="app_name_label">App</string>
    <string name="last_time_used_label">Last time used</string>
    <!-- label for usage time -->
    <string name="usage_time_label">Usage time</string>

    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>


</resources>