<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D1D1D"
    tools:context=".WelcomeApp">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="233dp"
        android:fontFamily="@font/cousine"
        android:text="@string/welcome_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:fontFamily="@font/cousine"
        android:text="@string/name_label"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/welcome_text"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:alpha="0.6"
        android:ems="10"
        android:fontFamily="@font/cousine"
        android:inputType="text"
        android:text="@string/input_name"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/name_label"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="17dp"
        android:background="#FF7D6F"
        android:backgroundTint="#FF7D6F"
        android:backgroundTintMode="src_over"
        android:text="@string/get_started"
        app:cornerRadius="2sp"
        app:layout_constraintStart_toStartOf="@+id/input_name"
        app:layout_constraintTop_toBottomOf="@+id/input_name"
        app:strokeColor="#FF7D6F" />
</androidx.constraintlayout.widget.ConstraintLayout>